[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqforge"
version = "1.0.0"
description = "SeqForge: a genomics toolkit."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Elijah R. Bring Horvath" }]
dependencies = [
  "biopython",
  "pandas",
  "matplotlib",
]

[project.scripts]
seqforge = "seqforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seqforge*"]